--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,13 +8,50 @@
 </head>
 
 <body>
-    <h1>Hey from server</h1>
-    <% urls.forEach(url=> { %>
-        <li>
-            <%= url.shortId %>
+    <h1>URL Shortener</h1>
 
-        </li>
-        <% }) %>
+    <% if (locals.id) { %>
+        <p>URL Generated : http://localhost:8000/url/<%= id %>
+        </p>
+        <a href="http://localhost:8000/url/<%= id %>">click here to visit</a>
+        <% } %>
+<br>
+            <label>Enter your original URL</label>
+            <form action="/url" method="post">
+                <div style="display: flex; flex-direction: column; width: 172px;">
+                    <input type="text" placeholder="https://google.com" name="url">
+                    <button type="submit">Generate</button>
+                </div>
+            </form>
+
+            <% if (locals.urls) { %>
+                <table>
+                    <thead>
+                        <th>S.No</th>
+                        <th>ShortID</th>
+                        <th>Redirect</th>
+                        <th>Clicks</th>
+                    </thead>
+                    <tbody>
+                        <% urls.forEach((url, index)=> { %>
+                            <tr>
+                                <td>
+                                    <%= index + 1 %>
+                                </td>
+                                <td>
+                                    <%= url.shortId %>
+                                </td>
+                                <td>
+                                    <%= url.redirectURL %>
+                                </td>
+                                <td>
+                                    <%= url.visitHistory.length %>
+                                </td>
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+                <% } %>
 </body>
 
 </html>
